# pet-store-python-gprc

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .python-version  Dockerfile  Makefile  client.py  createSchema.py  docker-compose.yaml  example.nginx.conf  pyproject.toml  requirements.txt  server.py  server_fastapi.py  server_grpc.py  settings.py
.github/: deploy-dev.yaml
.github/workflows/: build-dev.yaml  dev.yaml  dev.yml
fast_routers/: __init__.py  purchase.py  sale_order.py
models/: __init__.py  base.py  inventory.py  purchase.py  sale_order.py
models/migrations/inventory/: 0_20231109154023_init.py  0_20231206175229_init.py  1_20230928114052_product_model.py  1_20231126095115_update.py  1_20231207152041_update.py  2_20230928114123_stock_model.py  2_20231126095241_update.py  3_20230928114530_stock_transaction_model.py
protos/: hello.proto  inventory.proto
rpc_servicers/: __init__.py  hello.py  inventory.py
services/: __init__.py  purchase.py  quantity.py  sale_order.py  utils.py
